--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -1,11 +1,22 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --shade1: #222222;
+  --shade2: #171717;
+  --shade3: #4D4D4D;
+  --shade4: #B3B3B3;
+  --shade5: #e3e3e3;
 }
 
+/**
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+
+}
+*/
+
+body {
+  background-color: var(--bg);
+  margin: 0;
+}
+
+h1, h2, p {
+  margin: 0;
 }
